:sparkles: feat: whiteboard is now working, along the 'change size' button and opacity slider

--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
 
     <div id="main">
 
-        <button class="change-size">change size</button>
-        <input class="size-value">
-
+        <div class="right">
+            <button id="change-size">change size</button>
+            <input id="size-value">
+        </div>
+        
         <div id="container"></div>
 
         <div class="options">
